[tool.poetry]
name = "whohacks"
version = "1.5.0"
description = ""
authors = ["Norbert Szulc <norbert@not7cd.net>"]

[tool.poetry.dependencies]
python = "^3.11"
authlib = "0.15.3"
certifi = "2023.7.22"
cffi = "1.14.5"
chardet = "4.0.0"
click = "7.1.2"
cryptography = "3.4.6"
flask-cors = "3.0.10"
flask-login = "0.5.0"
flask = "1.1.2"
gunicorn = ">19"
idna = "2.10"
itsdangerous = "1.1.0"
jinja2 = "2.11.3"
markupsafe = "1.1.1"
peewee = "3.14.2"
pika = "1.2.0"
pycparser = "2.20"
python-dateutil = "2.8.1"
requests = "2.25.1"
six = "1.15.0"
urllib3 = "1.26.19"
werkzeug = "1.0.1"
pytz = "^2024.1"
psycopg2-binary = "^2.9.9"
pysqlite3 = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
